--- a/static/slides/09-mlr-inference.html
+++ b/static/slides/09-mlr-inference.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Maria Tackett" />
     <script src="libs/font-awesome/kePrint/kePrint.js"></script>
+    <link href="libs/font-awesome/lightable/lightable.css" rel="stylesheet" />
     <link rel="stylesheet" href="sta210-slides.css" type="text/css" />
   </head>
   <body>
@@ -12,6 +13,7 @@
 class: center, middle, inverse, title-slide
 
 # Multiple linear regression
+## Inference
 ### Prof. Maria Tackett
 
 ---
@@ -28,7 +30,7 @@ class: middle, center
 
 ## Topics
 
-- Conduct a hypothesis testing for `\(\beta_j\)`
+- Conduct a hypothesis test for `\(\beta_j\)`
 
 - Calculate a confidence interval for `\(\beta_j\)`
 
@@ -92,18 +94,6 @@ We would like to use the characteristics of a house to understand variability in
 
 ---
 
-## Interpreting `\(\hat{\beta}_j\)`
-
-- An estimated coefficient `\(\hat{\beta}_j\)` is the expected change in `\(y\)` to change when `\(x_j\)` increases by one unit **&lt;u&gt;holding the values of all other predictor variables constant&lt;/u&gt;**.
-
---
-
-&lt;br&gt;
-
-- *Example:* The estimated coefficient for **`living_area`** is 65.90. This means for each additional square foot of living area, we expect the sale price of a house in Levittown, NY to increase by $65.90, on average, holding all other predictor variables constant.
-
----
-
 class: middle, center
 
 ## Hypothesis test for `\(\beta_j\)`
@@ -157,7 +147,7 @@ class: middle, center
 .eq[
 `$$\begin{align}
 &amp;H_0: \beta_{living\_area} = 0 \\
-&amp;H_0: \beta_{living\_area} \neq 0\end{align}$$`
+&amp;H_a: \beta_{living\_area} \neq 0\end{align}$$`
 ]
 
 ---
@@ -244,16 +234,68 @@ The estimated slope, 65.903, is 4.124 standard errors above the hypothesized mea
 ## 3️⃣ Calculate the p-value
 
 .tiny[
-
-|term         |     estimate|   std.error| statistic| p.value|
-|:------------|------------:|-----------:|---------:|-------:|
-|(Intercept)  | -7148818.957| 3820093.694|    -1.871|   0.065|
-|bedrooms     |   -12291.011|    9346.727|    -1.315|   0.192|
-|bathrooms    |    51699.236|   13094.170|     3.948|   0.000|
-|living_area  |       65.903|      15.979|     4.124|   0.000|
-|lot_size     |       -0.897|       4.194|    -0.214|   0.831|
-|year_built   |     3760.898|    1962.504|     1.916|   0.059|
-|property_tax |        1.476|       2.832|     0.521|   0.604|
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; term &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; estimate &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; std.error &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; statistic &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; p.value &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; (Intercept) &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -7148818.957 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3820093.694 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1.871 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.065 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; bedrooms &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -12291.011 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9346.727 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1.315 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.192 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; bathrooms &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 51699.236 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 13094.170 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3.948 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.000 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;background-color: #dce5b2 !important;"&gt; living_area &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 65.903 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 15.979 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 4.124 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.000 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; lot_size &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.897 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.194 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.214 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.831 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; year_built &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3760.898 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1962.504 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.916 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.059 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; property_tax &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.476 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2.832 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.521 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.604 &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
 ]
 
 .eq[
@@ -266,29 +308,84 @@ The estimated slope, 65.903, is 4.124 standard errors above the hypothesized mea
 
 ## 3️⃣ Calculate the p-value
 
-The p-value is calculated using a `\(t\)` distribution with `\(n-p-1\)` degrees of freedom.
-
-In this example, the p-value is calculated using a `\(t\)` distribution `\(85-6-1 = 78\)` degrees of freedom.
+The p-value is calculated using a `\(t\)` distribution with `\(\color{purple}{n-p-1}\)` degrees of freedom, where `\(p\)` is the number of coefficients in the model.
 
 --
 
-&lt;font class = "vocab"&gt; Given &lt;/font&gt;  `\(\beta_{living\_area}  = 0\)` &lt;/font class = "vocab"&gt; the probability of observing a slope at least as extreme as the one we've observed, 65.903, is 0.00009.&lt;/font&gt;
+In this example, the p-value is calculated using a `\(t\)` distribution with `\(\color{purple}{85-6-1 = 78}\)` degrees of freedom.
+
+--
+
+.alert[ Given `\(\beta_{living\_area}  = 0\)` the probability of observing a coefficient at least as extreme as the one we've observed, 65.903, is 0.00009.
+]
 
 ---
 
 ## 4️⃣ State the conclusion
 
 .tiny[
-
-|term         |     estimate|   std.error| statistic| p.value|
-|:------------|------------:|-----------:|---------:|-------:|
-|(Intercept)  | -7148818.957| 3820093.694|    -1.871|   0.065|
-|bedrooms     |   -12291.011|    9346.727|    -1.315|   0.192|
-|bathrooms    |    51699.236|   13094.170|     3.948|   0.000|
-|living_area  |       65.903|      15.979|     4.124|   0.000|
-|lot_size     |       -0.897|       4.194|    -0.214|   0.831|
-|year_built   |     3760.898|    1962.504|     1.916|   0.059|
-|property_tax |        1.476|       2.832|     0.521|   0.604|
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; term &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; estimate &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; std.error &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; statistic &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; p.value &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; (Intercept) &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -7148818.957 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3820093.694 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1.871 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.065 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; bedrooms &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -12291.011 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9346.727 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1.315 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.192 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; bathrooms &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 51699.236 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 13094.170 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3.948 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.000 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;background-color: #dce5b2 !important;"&gt; living_area &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 65.903 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 15.979 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 4.124 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.000 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; lot_size &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.897 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.194 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.214 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.831 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; year_built &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3760.898 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1962.504 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.916 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.059 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; property_tax &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.476 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2.832 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.521 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.604 &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
 ]
 
 &lt;font class = "vocab"&gt;The p-value is very small, so we reject `\(H_0\)`. The data provide sufficient evidence that the living area is a helpful predictor in the model explaining some of the variability in price.
@@ -306,7 +403,7 @@ class: middle, center
 .eq[
 The `\(C%\)` confidence interval for `\(\beta_j\)` 
 `$$\hat{\beta}_j \pm t^* SE(\hat{\beta}_j)$$`
-where `\(t^*\)` follows a `\(t\)` distribution with with `\(n - p - 1\)` degrees of freedom
+where `\(t^*\)` follows a `\(t\)` distribution with `\(n - p - 1\)` degrees of freedom
 ]
 
 **General Interpretation**: We are `\(C%\)` confident that the interval LB to UB contains the population coefficient of `\(x_j\)`. Therefore, for every one unit increase in `\(x_j\)`, we expect `\(y\)` to change by LB to UB units, holding all else constant. 
@@ -317,16 +414,84 @@ where `\(t^*\)` follows a `\(t\)` distribution with with `\(n - p - 1\)` degrees
 
 
 .tiny[
-
-|term         |     estimate|   std.error| statistic| p.value|      conf.low|  conf.high|
-|:------------|------------:|-----------:|---------:|-------:|-------------:|----------:|
-|(Intercept)  | -7148818.957| 3820093.694|    -1.871|   0.065| -14754041.291| 456403.376|
-|bedrooms     |   -12291.011|    9346.727|    -1.315|   0.192|    -30898.915|   6316.893|
-|bathrooms    |    51699.236|   13094.170|     3.948|   0.000|     25630.746|  77767.726|
-|living_area  |       65.903|      15.979|     4.124|   0.000|        34.091|     97.715|
-|lot_size     |       -0.897|       4.194|    -0.214|   0.831|        -9.247|      7.453|
-|year_built   |     3760.898|    1962.504|     1.916|   0.059|      -146.148|   7667.944|
-|property_tax |        1.476|       2.832|     0.521|   0.604|        -4.163|      7.115|
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; term &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; estimate &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; std.error &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; statistic &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; p.value &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; conf.low &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; conf.high &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; (Intercept) &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -7148818.957 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3820093.694 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1.871 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.065 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -14754041.291 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 456403.376 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; bedrooms &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -12291.011 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9346.727 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1.315 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.192 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -30898.915 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 6316.893 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; bathrooms &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 51699.236 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 13094.170 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3.948 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.000 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 25630.746 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 77767.726 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;background-color: #dce5b2 !important;"&gt; living_area &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 65.903 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 15.979 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 4.124 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.000 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 34.091 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 97.715 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; lot_size &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.897 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.194 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.214 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.831 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -9.247 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 7.453 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; year_built &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3760.898 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1962.504 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.916 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.059 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -146.148 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 7667.944 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; property_tax &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.476 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2.832 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.521 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.604 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -4.163 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 7.115 &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
 ]
 .vocab[
 We are 95% confident that for every one additional square foot in living area, we expect the price to increase by $34.09 to $97.71, holding all other characteristics constant.
@@ -380,7 +545,7 @@ For a given observation `\((x_{i1}, x_{i2}, \ldots, x_{ip}, y_i)\)`, we can rewr
 
 ---
 
-## Estimating `\(\sigma^2\)`
+## Estimating `\(\sigma_\epsilon^2\)`
 
 For a given observation `\((x_{i1}, x_{i2}, \ldots,x_{ip}, y_i)\)` the residual is 
 
@@ -393,7 +558,7 @@ For a given observation `\((x_{i1}, x_{i2}, \ldots,x_{ip}, y_i)\)` the residual 
 The estimated value of the regression variance , `\(\sigma_{\epsilon}^2\)`, is 
 
 .eq[
-`$$\hat{\sigma}_\epsilon^2  = \frac{RSS}{n-p-1} = \frac{\sum_{i=1}^ne_i^2}{n-p-1}$$`
+`$$\hat{\sigma}_\epsilon^2  = \frac{\sum_{i=1}^ne_i^2}{n-p-1}$$`
 ]
 
 ---
@@ -414,7 +579,7 @@ This produces messy formulas, so instead we can use matrix notation for multiple
 
 ## Recap
 
-- Conduct a hypothesis testing for `\(\beta_j\)`
+- Conduct a hypothesis test for `\(\beta_j\)`
 
 - Calculate a confidence interval for `\(\beta_j\)`
 
