--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -766,11 +766,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 05</td>
             <td align="right" style="width:25%;text-align:right">Mon, Sep 14</td>
-            <td style="width:40%;text-align:left">MLR: inference + conditions</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">MLR: Inference</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/09-mlr-inference.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -1010,7 +1009,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 08</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 05</td>
-            <td style="width:40%;text-align:left">TBD</td>
+            <td style="width:40%;text-align:left">Statistics experience</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1354,7 +1353,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Nov 04</td>
-            <td style="width:40%;text-align:left">TBD</td>
+            <td style="width:40%;text-align:left">Statistics experience</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
