--- a/public/quiz/quiz-02.html
+++ b/public/quiz/quiz-02.html
@@ -9,7 +9,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content />
 
 
 <title>Quiz 02</title>
@@ -1362,18 +1361,18 @@ src: local('Source Code Pro Regular'), local('SourceCodePro-Regular'), url(data:
 @charset "UTF-8";
 
 html {
-font-size: 13pt;
-}
-p {
-font-size: 13pt;
+font-size: 17px;
 }
 body {
 font-family: 'Source Sans Pro', sans-serif;
-font-weight: 350;
+font-weight: 400;
 background-color: #fefefe;
 color: #222;
 counter-reset: li;
-font-size: 13pt;
+font-size: 17px;
+}
+p {
+font-size: 17px;
 }
 h1.title {
 font-weight: 700;
@@ -1391,10 +1390,9 @@ font-family: 'Source Sans Pro', sans-serif;
 font-weight: 400;
 color: #008eaa;
 }
-h3 {
-font-family: 'Source Sans Pro', sans-serif;
+h3.subtitle {
+font-style: normal;
 color: #008eaa;
-font-weight: 400;
 }
 h4 {
 font-style: normal;
@@ -1407,15 +1405,15 @@ line-height: 1;
 h4.author,
 h4.date {
 font-family: 'Source Sans Pro', sans-serif;
-font-weight: 300;
+font-weight: 350;
 }
 .numeral {
 font-family: "Source Sans Pro";
-font-weight: 300;
+font-weight: 350;
 }
 em {
 font-style: italic;
-font-weight: 300;
+font-weight: 350;
 font-family: "Source Sans Pro";
 }
 strong {
@@ -1427,34 +1425,39 @@ font-family: "Source Sans Pro";
 @media screen and (max-width: 760px) {
 pre {
 width: 100%;
-font-size: 16px;
+font-size: 15px;
+overflow-x: auto;
 }
 }
 code {
 font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-font-size: 15px;
+font-size: 17px;
 line-height: 1.6;
 }
-pre code {
-font-size: 15px;
+pre {
+background-color: #FFFFFF;
+
+
+border-width: 0px;
+border-radius: 4px;*/
+overflow-x: auto;
+padding: 1em;
+white-space: inherit;
+word-break: normal;
+word-wrap: normal;
+}
+pre.r {
+background-color: #F5F5F5;	
+white-space: inherit;
 }
 .marginnote code,
 .sidenote code {
-font-size: 1rem;
-}
-.marginnote{
-font-size: 13px;
-}
-pre {
-width: 100%;
-font-size: 16px;
-overflow-x: auto;
+font-size: 14px;
 }
 
 ol {
 
 padding-left: 0;
-font-size: 13pt;
 }
 ol>li {
 
@@ -1464,9 +1467,8 @@ list-style: none;
 width: 90%;
 padding-top: 10px;
 padding-bottom: 10px;
-padding-right: 0;
-padding-left: 90px;
-font-size: 13pt;
+padding-right: 0px;
+padding-left: 110px;
 }
 ol>li:before {
 
@@ -1474,22 +1476,34 @@ content: "Question " counter(li)".";
 
 counter-increment: li;
 position: absolute;
-color: #339898;
+color: #008eaa;
 left: -0.5px;
 font-weight: bold;
+margin-right: 10px;
 }
-ol ol>li:before {
-counter-reset: sub-item;
-
-
-position: absolute;
-color: #339898;
-left: -0.5px;
-font-weight: bold;
-padding-left: 90px;
+ol ul {
+width: 92%;
 }
-.td {
-font-size: 10pt;
+ol ol {
+counter-reset: subitem;
+}
+td {
+font-size: 15px;
+}
+
+.footer {
+left: 0;
+bottom: 0;
+width: 100%;
+color: #7C878E;
+font-size: 14px;
+}
+
+div .commit {
+font-size: 16px;
+font-weight: 400;
+color: #aa008e;
+text-decoration: italic;
 }
 </style>
 
@@ -1674,11 +1688,29 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Quiz 02</h1>
+<h3 class="subtitle">Active Oct 1 - 2, 2 hour time limit</h3>
 
 </div>
 
 
-<p>Instructions will be posted once the quiz is assigned.</p>
+<div id="general-instructions" class="section level2">
+<h2>General instructions</h2>
+<p>Quiz 02 will be released on <strong>October 1 at 12a EST</strong> and must be completed by <strong>October 2 at 11:59p EST</strong>. Once you open the quiz, you will have <strong>2 hours</strong> to complete it. The timer automatically starts when you open the quiz, and the quiz will automatically close when you reach the time limit.</p>
+<p>During the time the quiz is available, you will see a <strong>Quiz 02</strong> assignment on Gradescope. Click on that assignment to take the quiz.</p>
+<p>In addition to the Quiz 02 assignment on Gradescope, you will find a repo called <strong>quiz-02-[your_github_username]</strong> on <a href="https://www.github.com/sta210-fa20">GitHub</a>. There is one question that requires you to do analysis in R. For this question, you will put all code and output used to support your conclusions in the .Rmd file, knit to a PDF, and upload that PDF in the specified quiz question. <strong>Write your narrative in the Rmd file in the Rmd file.</strong></p>
+</div>
+<div id="notes" class="section level2">
+<h2>Notes</h2>
+<ul>
+<li><p>The quiz is an individual assignment. You may <u>not</u> discuss the quiz with anyone else (either in the class or not). See the Academic Honesty guidelines in the <a href="https://sta210-fa20.netlify.app/syllabus/#course-community">course syllabus</a> for more information.</p></li>
+<li><p>The quiz is open-book, open-note, so you may use any materials from class (except other people!) as you take the quiz.</p></li>
+<li><p>Be sure to read all instructions and quiz questions carefully!</p></li>
+<li><p>Piazza will be inactive during the duration of the quiz, so no one will be able to post questions on Piazza October 1 - 2. If you have computing issues or trouble accessing the quiz on Gradescope, please email Professor Tackett with <strong>STA 210 Quiz</strong> in the subject line.</p></li>
+<li><p>There will be no office hours on October 1 - 2. Office hours will resume on Monday, October 5.</p></li>
+<li><p>The teaching team will not be able to answer questions about the quiz (outside of technical issues) while the quiz is active. This is to ensure all students have the same information regardless of when they take the quiz.</p></li>
+<li><p>See <a href="https://www.youtube.com/watch?v=j_kha2UkeMY&amp;feature=youtu.be">this video by Gradescope</a> <strong>before</strong> taking the quiz to get an idea of what to expect.</p></li>
+</ul>
+</div>
 
 
 
