--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -300,7 +300,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-12/">Week 12</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-12/">Week 12: Log-linear models</a>
         </div>
     </div>
     
@@ -1555,10 +1555,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right">Week 12</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 02</td>
             <td style="width:40%;text-align:left">Log-linear models</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/23-poisson.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
