--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -262,32 +262,47 @@ table tbody tr:nth-child(odd){
 <tr>
 <td>Instructor</td>
 <td><a href="mailto:maria.tackett@duke.edu">Prof. Maria Tackett</a></td>
-<td>Wed 2p - 3p</td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:martha.aboagye@duke.edu">Martha Aboagye</a></td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:elb75@duke.edu">Betsy Bersson</a></td>
-<td>Mon 8a - 10a</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:meredith.brown@duke.edu">Meredith Brown</a></td>
-<td>Tue 12p - 2p</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:cody.coombs@duke.edu">Cody Coombs</a></td>
-<td>Mon 11:30a - 1:30p</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:sophia.dalldorf@duke.edu">Sophie Dalldorf</a></td>
-<td>Thu 10a - 12p</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
-<td><a href="mailto:emily.tallman@duke.edu">Emily Tallman</a></td>
-<td>Tue 3:30p - 5:30p</td>
+<td><a href="mailto:ezinne.nwankwo@duke.edu">Ezinne Nwankwo</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:sophie.riegel@duke.edu">Sophie Riegel</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>R Support TA</td>
+<td><a href="mailto:georger.lindner@duke.edu">George Lindner</a></td>
+<td>TBD</td>
 </tr>
 </tbody>
 </table>
