--- a/public/index.html
+++ b/public/index.html
@@ -276,22 +276,22 @@ table tbody tr:nth-child(odd){
   <tr>
     <td class="tg-0pky">Lecture</td>
     <td class="tg-0pky">All Students</td>
-    <td class="tg-0pky">Mon and Wed 3:30p - 4:45p</td>
+    <td class="tg-0pky">Tue and Thu 10:15a - 11:30a</td>
   </tr>
   <tr>
     <td class="tg-0pky">Labs</td>
     <td class="tg-0pky">Lab 01</td>
-    <td class="tg-0pky">Thu 8:30a - 9:45a</td>
+    <td class="tg-0pky">Mon 12p - 1:15p</td>
   </tr>
   <tr>
     <td class="tg-0pky"></td>
     <td class="tg-0pky">Lab 02</td>
-    <td class="tg-0pky">Thu 12p - 1:15p</td>
+    <td class="tg-0pky">Mon 1:45p - 3p</td>
   </tr>
   <tr>
     <td class="tg-0pky"></td>
     <td class="tg-0pky">Lab 03</td>
-    <td class="tg-0pky">Thu 5:15p - 6:30p</td>
+    <td class="tg-0pky">Mon 5:15p - 6:30p</td>
   </tr>
   <tr>
     <td class="tg-0pky"></td>
@@ -372,32 +372,47 @@ table tbody tr:nth-child(odd){
 <tr>
 <td>Instructor</td>
 <td><a href="mailto:maria.tackett@duke.edu">Prof. Maria Tackett</a></td>
-<td>Wed 2p - 3p</td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:martha.aboagye@duke.edu">Martha Aboagye</a></td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:elb75@duke.edu">Betsy Bersson</a></td>
-<td>Mon 8a - 10a</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:meredith.brown@duke.edu">Meredith Brown</a></td>
-<td>Tue 12p - 2p</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:cody.coombs@duke.edu">Cody Coombs</a></td>
-<td>Mon 11:30a - 1:30p</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
 <td><a href="mailto:sophia.dalldorf@duke.edu">Sophie Dalldorf</a></td>
-<td>Thu 10a - 12p</td>
+<td>TBD</td>
 </tr>
 <tr>
 <td>TA</td>
-<td><a href="mailto:emily.tallman@duke.edu">Emily Tallman</a></td>
-<td>Tue 3:30p - 5:30p</td>
+<td><a href="mailto:ezinne.nwankwo@duke.edu">Ezinne Nwankwo</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:sophie.riegel@duke.edu">Sophie Riegel</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>R Support TA</td>
+<td><a href="mailto:georger.lindner@duke.edu">George Lindner</a></td>
+<td>TBD</td>
 </tr>
 </tbody>
 </table>
